--- a/views/mainMenu.hbs
+++ b/views/mainMenu.hbs
@@ -12,7 +12,8 @@
   <nav>
     <h3> Main Menu </h3>
     <ul>
-      <li><a href ="/logout"> Logout</a></li>
+        <li><a href ="/mainMenu"> Main Menu</a></li> 
+      <li><a href ="auth/logout"> Logout</a></li>
     </ul>
   </nav>
 
