Added signup page and initial page navigation

--- a/frontend/connect-four/src/index.scss
+++ b/frontend/connect-four/src/index.scss
@@ -36,6 +36,8 @@ body {
         border-radius: 10px;
         text-align: start;
         backdrop-filter: blur(4px);
+        border: 1px solid $color-grey-border;
+        box-sizing: border-box;
     }
 
     &--title {
@@ -96,5 +98,17 @@ body {
         color: $color-grey-text;
         background-color: $color-white-x-transparent;
         cursor: pointer;
+    }
+
+    &--return-button {
+        padding: 0;
+        width: 3.5rem;
+        height: 3.5rem;
+    }
+
+    &--return-icon {
+        position: relative;
+        top: 0.15rem;
+        left: -0.15rem;
     }
 }
