--- a/public/index.css
+++ b/public/index.css
@@ -4,10 +4,18 @@
 body {
   color: #666666;
   font-family: Open Sans;
-  background: url(background.jpg) no-repeat center center fixed; }
+  background: url(background.jpg) no-repeat center center fixed;
+  margin: 0;
+  padding: 0; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  padding: 0;
+  margin: 0; }
+
+h3 {
+  padding: 0;
+  margin: 0; }
 
 .login--page {
   display: flex;
@@ -31,6 +39,9 @@ a {
   padding: 0;
   margin: 0 0 0.5rem 0;
   font-family: Roboto; }
+
+.login--form {
+  display: grid; }
 
 .login--label {
   padding: 0;
@@ -96,3 +107,235 @@ a {
 @media only screen and (max-width: 500px) {
   .login--holder {
     padding: 2rem; } }
+
+.home--page {
+  width: calc(100% - 4rem);
+  height: calc(100vh - 4rem);
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr;
+  grid-auto-rows: min-content 1fr;
+  gap: 1.5rem;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin: 2rem;
+  background-color: #ffffffbf;
+  border: 1px solid #9e9e9e;
+  box-sizing: border-box;
+  position: absolute; }
+
+.home--tile {
+  width: 100%;
+  height: min-content;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff80;
+  padding: 1rem;
+  border-radius: 20px;
+  border: 1px solid #9e9e9e;
+  box-sizing: border-box; }
+
+.home--tile-title {
+  font-weight: bold;
+  font-size: medium;
+  margin-inline-start: 0.5rem; }
+
+.home--players-tile {
+  grid-column: 1;
+  grid-row-start: 1;
+  grid-row-end: 3; }
+
+.home--players-list {
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  overflow: auto;
+  list-style: none;
+  padding: 1rem 0 0.5rem 1rem;
+  margin: 0; }
+
+.home--players-entry {
+  padding: 0;
+  margin: 0.25rem; }
+
+.home--players-status {
+  position: absolute;
+  display: block;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 0.25rem;
+  transform: translateY(0.5rem); }
+
+.home--players-name {
+  padding: 0;
+  margin: 0;
+  padding-inline-start: 1rem;
+  max-width: 20ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.home--status-online {
+  background-color: #a6f4b7; }
+
+.home--status-ingame {
+  background-color: #f0ac8f; }
+
+.home--status-away {
+  background-color: #c4c4c4; }
+
+.home--game-tile {
+  grid-column: 2;
+  height: 100%;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.home--game-button {
+  border: none;
+  display: block;
+  color: white;
+  background-color: #a6e589;
+  font-size: xx-large;
+  font-weight: bold;
+  padding: 3rem 2rem;
+  border-radius: 20px; }
+
+.home--user-tile {
+  grid-column: 3;
+  grid-row: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative; }
+
+.home--user-name {
+  padding: 0;
+  margin: 0;
+  font-size: larger;
+  max-width: 15ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.home--user-status {
+  display: inline-block;
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 0.375rem;
+  margin-inline-start: 1rem; }
+
+.home--user-status-label {
+  font-size: x-small;
+  color: #a6a6a6;
+  margin-inline-start: 0.5rem; }
+
+.home--user-logout-link {
+  display: flex;
+  margin-inline-start: auto;
+  height: fit-content;
+  align-items: center; }
+
+.home--user-logout {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 2rem;
+  transform: translateY(0.2rem); }
+
+.home--stats-tile {
+  grid-column: 3;
+  grid-row: 2; }
+
+.home--stats-list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 1rem 1.5rem 0.5rem 1.5rem;
+  margin: 0; }
+
+.home--stats-item {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  margin-bottom: 0.5rem; }
+
+.home--stats-item:last-child {
+  margin: 0; }
+
+.home--stats-item:last-child::after {
+  display: none; }
+
+.home--stats-item::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: calc(100% + 1rem);
+  height: 1px;
+  background-color: #9e9e9e;
+  bottom: -0.25rem;
+  left: -0.5rem; }
+
+.home--stats-name {
+  margin: 0;
+  padding: 0; }
+
+.home--stats-value {
+  margin: 0;
+  padding: 0;
+  margin-left: auto; }
+
+@media only screen and (max-width: 1100px) {
+  .home--page {
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: min-content min-content min-content auto; }
+  .home--players-tile {
+    grid-column: 1;
+    grid-row: 2; }
+  .home--players-list {
+    max-height: 20rem; }
+  .home--game-tile {
+    grid-column: 2;
+    grid-row-start: 1;
+    grid-row-end: 5; }
+  .home--user-tile {
+    grid-column: 1;
+    grid-row: 1; }
+  .home--user-logout {
+    top: 0.75rem; }
+  .home--user-status-label {
+    display: none; }
+  .home--stats-tile {
+    grid-column: 1;
+    grid-row: 3; } }
+
+@media only screen and (max-width: 750px) {
+  .home--page {
+    margin: 1rem;
+    padding: 0.75rem;
+    gap: 0.75rem;
+    width: calc(100% - 2rem);
+    height: calc(100vh - 2rem);
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content min-content min-content auto;
+    overflow: auto; }
+  .home--players-tile {
+    grid-column: 1;
+    grid-row: 2; }
+  .home--players-list {
+    max-height: 20rem; }
+  .home--game-tile {
+    grid-column: 1;
+    grid-row: 4; }
+  .home--game-button {
+    font-size: x-large;
+    padding-block: 2rem; }
+  .home--user-tile {
+    grid-column: 1;
+    grid-row: 1; }
+  .home--user-status-label {
+    display: none; }
+  .home--stats-tile {
+    grid-column: 1;
+    grid-row: 3; } }
