--- a/views/login.html
+++ b/views/login.html
@@ -10,11 +10,25 @@
         <div class="login--page">
             <div class="login--holder">
                 <h1 class="login--title">Login</h1>
-                <p class="login--username-label login--label">Username</p>
-                <input class="login--input" type="text" />
-                <p class="login--password-label login--label">Password</p>
-                <input class="login--input" type="text" />
-                <button class="login--button">Let's Play!</button>
+                <form class="login--form" action="/auth/login" method="POST">
+                    <p class="login--username-label login--label">Username</p>
+                    <input
+                        class="login--input"
+                        type="email"
+                        id="email"
+                        name="email"
+                    />
+                    <p class="login--password-label login--label">Password</p>
+                    <input
+                        class="login--input"
+                        type="password"
+                        id="password"
+                        name="password"
+                    />
+                    <button class="login--button" type="submit">
+                        Let's Play!
+                    </button>
+                </form>
                 <a href="/signup">
                     <button class="login--new-account-button">
                         Make a New Account
