--- a/public/index.scss
+++ b/public/index.scss
@@ -459,3 +459,223 @@ h3 {
         }
     }
 }
+
+.game {
+    &--page {
+        width: calc(100% - 4rem);
+        height: calc(100vh - 4rem);
+        display: grid;
+        grid-template-columns: minmax(auto, 25rem) 5fr;
+        grid-auto-rows: min-content min-content min-content 1fr;
+        gap: 1.5rem;
+        border-radius: 10px;
+        padding: 1.5rem;
+        margin: 2rem;
+        background-color: $color-white-transparent;
+        border: 1px solid $color-grey-border;
+        box-sizing: border-box;
+        position: absolute;
+    }
+
+    &--tile {
+        width: 100%;
+        height: min-content;
+        display: flex;
+        flex-direction: column;
+        background-color: $color-white-card;
+        padding: 1rem;
+        border-radius: 20px;
+        border: 1px solid $color-grey-border;
+        box-sizing: border-box;
+
+        &-title {
+            font-weight: bold;
+            font-size: medium;
+            margin-inline-start: 0.5rem;
+        }
+    }
+
+    &--turn {
+        &-tile {
+            grid-column: 1;
+            grid-row: 2;
+            display: flex;
+            flex-direction: row;
+        }
+
+        &-coin {
+            width: 4rem;
+        }
+
+        &-title {
+            padding-inline-start: 1rem;
+            font-size: xx-large;
+        }
+    }
+
+    &--players {
+        &-tile {
+            grid-column: 1;
+            grid-row: 3;
+            overflow: hidden;
+        }
+
+        &-holder {
+            display: flex;
+            flex-direction: row;
+            margin-top: 0.5rem;
+        }
+
+        &-coin {
+            width: 2rem;
+        }
+
+        &-name {
+            max-width: calc(100% - 3rem);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 0.5rem;
+            margin-inline-start: 0.75rem;
+        }
+    }
+
+    &--user {
+        &-tile {
+            grid-column: 1;
+            grid-row: 1;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            overflow: hidden;
+        }
+
+        &-name {
+            max-width: calc(100% - 2rem);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        &-status {
+            display: block;
+            margin-left: auto;
+            width: 0.75rem;
+            height: 0.75rem;
+            border-radius: 0.375rem;
+            background-color: $color-status-orange;
+        }
+    }
+
+    &--game {
+        &-tile {
+            grid-column: 2;
+            grid-row-start: 1;
+            grid-row-end: 5;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            justify-content: center;
+            overflow: hidden;
+            padding: 0;
+            margin: auto;
+        }
+
+        &-board {
+            width: 100%;
+            height: fit-content;
+            max-height: 85%;
+        }
+
+        &-buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            gap: 2%;
+        }
+
+        &-buttons-entry {
+            list-style: none;
+            width: 10.275%;
+        }
+
+        &-button {
+            margin: 0;
+            padding: 0;
+            background: transparent;
+            border: none;
+            width: 100%;
+        }
+
+        &-coin {
+            width: 100%;
+        }
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .game {
+        &--page {
+            grid-template-columns: minmax(auto, 20rem) 5fr;
+        }
+
+        &--turn {
+            &-title {
+                font-size: x-large;
+                padding: 0;
+                padding-inline-start: 0.5rem;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .game {
+        &--page {
+            margin: 1rem;
+            padding: 0.75rem;
+            gap: 0.75rem;
+            width: calc(100% - 2rem);
+            height: calc(100vh - 2rem);
+            grid-template-columns: 1fr;
+            grid-template-rows: min-content min-content min-content 1fr;
+        }
+
+        &--turn {
+            &-tile {
+                grid-row: 2;
+            }
+        }
+
+        &--user {
+            &-tile {
+                grid-row: 1;
+            }
+        }
+
+        &--players {
+            &-tile {
+                grid-row: 3;
+            }
+        }
+
+        &--game {
+            &-tile {
+                grid-column: 1;
+                grid-row: 4;
+            }
+
+            &-board {
+                max-height: 80%;
+            }
+
+            // TODO: fix buttons height on smaller screens
+            &-buttons {
+                // height: 20%;
+            }
+        }
+    }
+}
