Minor changes to page names, there is an error when a user signs up

--- a/views/signup.html
+++ b/views/signup.html
@@ -10,7 +10,7 @@
         <div class="login--page">
             <div class="login--holder">
                 <h1 class="login--title">New Account</h1>
-                <form class="login--form" action="/auth/register" method="POST">
+                <form class="login--form" action="/auth/signup" method="POST">
                     <p class="login--username-label login--label">Username</p>
                     <input
                         class="login--input"
