--- a/views/login.html
+++ b/views/login.html
@@ -36,5 +36,10 @@
                 </a>
             </div>
         </div>
+
+        {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{message}}</h4>
+        {{/if}}
+        
     </body>
 </html>
