--- a/views/signup.html
+++ b/views/signup.html
@@ -54,5 +54,10 @@
                 </a>
             </div>
         </div>
+
+        {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{message}}</h4>
+        {{/if}}
+        
     </body>
 </html>
