--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Home</title>
     </head>
@@ -43,7 +43,7 @@
                 <a class="home-user-logout-link" href="/login">
                     <img
                         class="home--user-logout"
-                        src="logout.svg"
+                        src="/logout.svg"
                         alt="log out"
                     />
                 </a>
