--- a/views/ingame.html
+++ b/views/ingame.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>In-Game</title>
     </head>
@@ -15,7 +15,7 @@
             <div class="game--tile game--turn-tile">
                 <img
                     class="game--turn-coin"
-                    src="p1-coin.svg"
+                    src="/p1-coin.svg"
                     alt="current player"
                 />
                 <h1 class="game--turn-title">Opponent's Turn!</h1>
@@ -25,7 +25,7 @@
                 <div class="game--players-holder">
                     <img
                         class="game--players-coin"
-                        src="p1-coin.svg"
+                        src="/p1-coin.svg"
                         alt="your coin"
                     />
                     <p class="game--players-name">Dylan12345</p>
@@ -33,7 +33,7 @@
                 <div class="game--players-holder">
                     <img
                         class="game--players-coin"
-                        src="p2-coin.svg"
+                        src="/p2-coin.svg"
                         alt="opponent's coin"
                     />
                     <p class="game--players-name">Dylan54321</p>
@@ -44,7 +44,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -53,7 +53,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -62,7 +62,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -71,7 +71,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -80,7 +80,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -89,7 +89,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -98,7 +98,7 @@
                     <li class="game--game-buttons-entry">
                         <button class="game--game-button">
                             <img
-                                src="p1-coin.svg"
+                                src="/p1-coin.svg"
                                 alt="place coin"
                                 class="game--game-coin"
                             />
@@ -106,7 +106,7 @@
                     </li>
                 </ul>
                 <img
-                    src="board.svg"
+                    src="/board.svg"
                     alt="game board"
                     class="game--game-board"
                 />
