--- a/views/signup.html
+++ b/views/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SignUp</title>
     </head>
@@ -47,17 +47,15 @@
                     >
                         <img
                             class="login--return-icon"
-                            src="chevron.svg"
+                            src="/chevron.svg"
                             alt="return to login"
                         />
                     </button>
                 </a>
+                {{#if message}}
+                <h4 class="login--error-message">{{message}}</h4>
+                {{/if}}
             </div>
         </div>
-
-        {{#if message}}
-        <h4 class="alert alert-danger mt-4">{{message}}</h4>
-        {{/if}}
-        
     </body>
 </html>
