--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
                 </a>
             </div>
             <div class="home--tile home--user-tile">
-                <h2 class="home--user-name">Dylan12345</h2>
+                <h2 class="home--user-name"><%= name %></h2>
                 <div class="home--user-status home--status-online"></div>
                 <p class="home--user-status-label">(online)</p>
                 <a class="home-user-logout-link" href="/login">
@@ -53,23 +53,23 @@
                 <ul class="home--stats-list">
                     <li class="home--stats-item">
                         <p class="home--stats-name">Games Played:</p>
-                        <h4 class="home--stats-value">12</h4>
+                        <h4 class="home--stats-value"><%= gamesPlayed %></h4>
                     </li>
                     <li class="home--stats-item">
-                        <p class="home--stats-name">Win/Loss Ratio:</p>
-                        <h4 class="home--stats-value">1.75</h4>
+                        <p class="home--stats-name">Win Percentage:</p>
+                        <h4 class="home--stats-value"><%= winRate %>%</h4>
                     </li>
                     <li class="home--stats-item">
                         <p class="home--stats-name">Wins:</p>
-                        <h4 class="home--stats-value">7</h4>
+                        <h4 class="home--stats-value"><%= wins %></h4>
                     </li>
                     <li class="home--stats-item">
                         <p class="home--stats-name">Losses:</p>
-                        <h4 class="home--stats-value">4</h4>
+                        <h4 class="home--stats-value"><%= losses %></h4>
                     </li>
                     <li class="home--stats-item">
                         <p class="home--stats-name">Draws:</p>
-                        <h4 class="home--stats-value">1</h4>
+                        <h4 class="home--stats-value"><%= draws %></h4>
                     </li>
                 </ul>
             </div>
