added game end card

--- a/views/ingame.html
+++ b/views/ingame.html
@@ -110,6 +110,17 @@
                     alt="game board"
                     class="game--game-board"
                 />
+                <div class="game--game-end">
+                    <div class="game--game-end-marker"></div>
+                    <a href="/home">
+                        <div class="game--game-end-card">
+                            <h1 class="game--game-end-title">You Win!</h1>
+                            <h3 class="game--game-end-return">
+                                Click Here to Return Home
+                            </h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
