--- a/public/index.css
+++ b/public/index.css
@@ -452,7 +452,8 @@ h3 {
   justify-content: center;
   overflow: hidden;
   padding: 0;
-  margin: auto; }
+  margin: auto;
+  position: relative; }
 
 .game--game-board {
   width: 100%;
@@ -482,15 +483,45 @@ h3 {
 .game--game-coin {
   width: 100%; }
 
+.game--game-end {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.game--game-end-marker {
+  position: absolute; }
+
+.game--game-end-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff99;
+  backdrop-filter: blur(12px);
+  border: 1px solid #9e9e9e;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 2rem 4rem;
+  color: #666666; }
+
+.game--game-end-title {
+  font-size: xxx-large; }
+
 @media only screen and (max-width: 1200px) {
   .game--page {
     grid-template-columns: minmax(auto, 20rem) 5fr; }
   .game--turn-title {
     font-size: x-large;
     padding: 0;
-    padding-inline-start: 0.5rem; } }
+    padding-inline-start: 0.5rem; }
+  .game--game-end-card {
+    padding: 1rem 2rem; } }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
   .game--page {
     margin: 1rem;
     padding: 0.75rem;
@@ -528,4 +559,10 @@ h3 {
     height: 100%;
     width: fit-content; }
   .game--game-coin {
-    height: 100%; } }
+    height: 100%; }
+  .game--game-end-card {
+    padding: 1rem; }
+  .game--game-end-title {
+    font-size: xx-large; }
+  .game--game-end-return {
+    font-size: medium; } }
