--- a/public/index.scss
+++ b/public/index.scss
@@ -19,6 +19,7 @@ $color-grey-icon: #6e6b6b;
 $color-grey-text: #666666;
 $color-grey-text-light: #a6a6a6;
 $color-grey-light: #cacaca;
+$color-white-end: #ffffff99;
 
 $color-board-bg: #617581;
 
@@ -592,6 +593,7 @@ h3 {
             overflow: hidden;
             padding: 0;
             margin: auto;
+            position: relative;
         }
 
         &-board {
@@ -626,6 +628,41 @@ h3 {
         &-coin {
             width: 100%;
         }
+
+        &-end {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &-marker {
+                position: absolute;
+            }
+
+            &-card {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                background-color: $color-white-end;
+                backdrop-filter: blur(12px);
+                border: 1px solid #9e9e9e;
+                box-sizing: border-box;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                border-radius: 20px;
+                padding: 2rem 4rem;
+                color: $color-grey-text;
+            }
+
+            &-title {
+                font-size: xxx-large;
+            }
+
+            &-return {
+            }
+        }
     }
 }
 
@@ -642,10 +679,16 @@ h3 {
                 padding-inline-start: 0.5rem;
             }
         }
+
+        &--game-end {
+            &-card {
+                padding: 1rem 2rem;
+            }
+        }
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
     .game {
         &--page {
             margin: 1rem;
@@ -719,6 +762,20 @@ h3 {
 
             &-coin {
                 height: 100%;
+            }
+
+            &-end {
+                &-card {
+                    padding: 1rem;
+                }
+
+                &-title {
+                    font-size: xx-large;
+                }
+
+                &-return {
+                    font-size: medium;
+                }
             }
         }
     }
