Commenting out section in signup and login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,9 +34,9 @@
                         Make a New Account
                     </button>
                 </a>
-                {{#if message}}
+                <!-- {{#if message}}
                 <h4 class="login--error-message">{{message}}</h4>
-                {{/if}}
+                {{/if}} -->
             </div>
         </div>
     </body>
