--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -52,9 +52,9 @@
                         />
                     </button>
                 </a>
-                {{#if message}}
+                <!-- {{#if message}}
                 <h4 class="login--error-message">{{message}}</h4>
-                {{/if}}
+                {{/if}} -->
             </div>
         </div>
     </body>
