--- a/views/ingame.ejs
+++ b/views/ingame.ejs
@@ -9,7 +9,7 @@
     <body>
         <div class="game--page">
             <div class="game--tile game--user-tile">
-                <h3 class="game--user-name">Dylan12345</h3>
+                <h3 class="game--user-name"><%= name %></h3>
                 <div class="game--user-status"></div>
             </div>
             <div class="game--tile game--turn-tile">
