Online users window in the main menu now updates to show changes in user status

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
                 <h2 class="home--user-name"><%= data.name.name %></h2>
                 <div class="home--user-status home--status-online"></div>
                 <p class="home--user-status-label">(online)</p>
-                <a class="home-user-logout-link" href="/login">
+                <a class="home-user-logout-link" href="/auth/logout">
                     <img
                         class="home--user-logout"
                         src="/logout.svg"
@@ -74,5 +74,54 @@
                 </ul>
             </div>
         </div>
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+            
+            socket.on("connect", () => {
+                socket.emit("request online users");
+            })
+
+            socket.on("update users", () => {
+                socket.emit("request online users");
+            })
+            
+            var users = document.getElementsByClassName("home--players-list")[0];
+
+            socket.on("online users response", (userList) => {
+
+                while (users.firstChild) {
+                    users.removeChild(users.firstChild);
+                 }
+
+                for(let i = 0; i < userList.results.length; i++) {
+                    console.log(userList.results[i])
+                    // Create list element
+                    var li = document.createElement("li");
+                    li.className = "home--players-entry";
+
+                    // Create status icon
+                    var statusIcon = document.createElement("div");
+                    if (userList.results[i].status === "online") {
+                        statusIcon.className = "home--players-status home--status-online";
+                    } else if (userList.results[i].status == "in-game") {
+                        statusIcon.className = "home--players-status home--status-ingame";
+                    }
+
+                    // Create name label 
+
+                    var nameLabel = document.createElement("p");
+                    nameLabel.className = "home--players-name"
+                    nameLabel.textContent = userList.results[i].name;
+
+                    li.appendChild(statusIcon);
+                    li.appendChild(nameLabel);
+                    users.appendChild(li);
+
+                }
+            });
+
+        </script>
     </body>
 </html>
