--- a/public/index.scss
+++ b/public/index.scss
@@ -630,6 +630,7 @@ h3 {
         }
 
         &-end {
+            display: hidden;
             position: absolute;
             width: 100%;
             height: 100%;
